--- a/package.json
+++ b/package.json
@@ -28,18 +28,17 @@
   },
   "repository": "justinhelmer/npm-publish-release",
   "dependencies": {
-    "bluebird": "^3.1.5",
+    "bluebird": "^3.2.1",
     "chalk": "^1.1.1",
     "commander": "^2.9.0",
-    "commander.js-error": "^1.0.2",
+    "commander.js-error": "^1.1.0",
     "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
     "gulp-exit": "0.0.2",
     "gulp-util": "^3.0.7",
     "lodash": "^4.1.0",
     "node-clean-exit": "^0.2.1",
-    "node-spork": "^0.2.1",
-    "through2-filter": "^2.0.0"
+    "node-spork": "^0.2.3"
   },
   "engines": {
     "node": ">=0.12"
