--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-publish-release",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "Simple interface for publishing a release to npm and/or github",
   "keywords": [
     "npm",
@@ -39,7 +39,7 @@
     "lodash": "^4.1.0",
     "node-alias": "^1.0.0",
     "node-clean-exit": "^0.2.1",
-    "node-spork": "^0.2.3"
+    "spork": "^0.3.1"
   },
   "engines": {
     "node": ">=0.12"
